# tg-bot

./: Cargo.toml  log4rs.yml
db_init_data/: regions  tags  users
src/: common.rs  error.rs  extractors.rs  group_handlers.rs  main.rs  private_handlers.rs  server_iface.rs
src/db_utils/: db.rs  error.rs  mod.rs  models.rs  user.rs  validate.rs
